--- a/css/style.css
+++ b/css/style.css
@@ -390,11 +390,13 @@ ul {
     width: 100%;
     min-height: 770px; }
     .home_banner_area .banner_inner .overlay {
-      background: url(../img/banner/home-banner.jpg) no-repeat scroll center center;
-      background-repeat:no-repeat;
-background-size:contain;
-background-position:center;
-      position: absolute;
+      background: url(../img/banner/team-28OCT19.jpg) no-repeat scroll center center;
+      background-repeat: no-repeat;
+      background-size: 100%;
+      background-position: 52% 52%;
+      width: 100%;
+      height: 400x;
+      position:absolute;
       left: 0;
       right: 0;
       top: 0;
